# ZPR

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  build.sh  build_and_run.sh  run.sh  script.sh  script_1_71_0.sh
.VSCodeCounter/: details.md  results.csv  results.md  results.txt
chess/: CMakeLists.txt  main.cpp  temp.cc  temp.h
chess engine/: .sconsign.dblite  Bishop.cc  Board.cc  CMakeLists.txt  Connector.cc  Connector.h  Empty_square.cc  King.cc  Knight.cc  Pawn.cc  Piece.cc  Queen.cc  Rook.cc  SConstruct  Square.cc  TODO.txt  main.cc
chess engine/.VSCodeCounter/: details.md  results.csv  results.md  results.txt
chess engine/lib/: Bishop.h  Board.h  Empty_square.h  Kight.h  King.h  Knight.h  Pawn.h  Piece.h  Piece.hpp  Queen.h  Rook.h  Square.h
chess/AI/: AIClass.h  positionValue.h
chess_engine/: BaseBoard.cc  Bishop.cc  Board.cc  CMakeCache.txt  CMakeLists.txt  CMakeLists_DEBUG.txt  Connector.cc  Connector.h  Empty_square.cc  King.cc  Knight.cc  Makefile  Pawn.cc  Piece.cc  Queen.cc  Rook.cc  Square.cc  a.out  chess.cbp  chesslib  cmake_install.cmake  compile.sh  main.cc  main.cpp  main1  main1.cc
chess_engine/AI/: AIClass.cc  AIClass.cpp  AIClass.h  PositionValue.cc  PositionValue.cpp  PositionValue.h
chess_engine/exceptions/: IllegalStateException.h  WrongArgException.cpp  WrongArgException.h
chess_engine/html/: _a_i_class_8cpp.html  _a_i_class_8cpp__incl.map  _a_i_class_8cpp__incl.md5  _a_i_class_8h.html  _a_i_class_8h.js  _a_i_class_8h__dep__incl.map  _a_i_class_8h__dep__incl.md5  _a_i_class_8h__incl.map  _a_i_class_8h__incl.md5  _a_i_class_8h_source.html  _base_board_8cc.html  _base_board_8cc.js  _base_board_8cc__incl.map  _base_board_8cc__incl.md5  _base_board_8h.html  _base_board_8h.js  _base_board_8h__dep__incl.map  _base_board_8h__dep__incl.md5  _base_board_8h__incl.map  _base_board_8h__incl.md5  _base_board_8h_source.html  _bishop_8cc.html  _bishop_8cc__incl.map  _bishop_8cc__incl.md5  _bishop_8h.html  _bishop_8h__dep__incl.map  _bishop_8h__dep__incl.md5  _bishop_8h__incl.map  _bishop_8h__incl.md5  _bishop_8h_source.html  _board_8cc.html  _board_8cc__incl.map  _board_8cc__incl.md5  _board_8h.html  _board_8h__dep__incl.map  _board_8h__dep__incl.md5  _board_8h__incl.map  _board_8h__incl.md5  _board_8h_source.html  _c_make_files_23_810_82_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  (+265 more)
chess_engine/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_8.js  classes_9.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_5.js  defines_6.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  (+37 more)
chess_engine/latex/: _a_i_class_8cpp.tex  _a_i_class_8cpp__incl.md5  _a_i_class_8h.tex  _a_i_class_8h__dep__incl.md5  _a_i_class_8h__incl.md5  _base_board_8cc.tex  _base_board_8cc__incl.md5  _base_board_8h.tex  _base_board_8h__dep__incl.md5  _base_board_8h__incl.md5  _bishop_8cc.tex  _bishop_8cc__incl.md5  _bishop_8h.tex  _bishop_8h__dep__incl.md5  _bishop_8h__incl.md5  _board_8cc.tex  _board_8cc__incl.md5  _board_8h.tex  _board_8h__dep__incl.md5  _board_8h__incl.md5  _c_make_files_23_810_82_2_compiler_id_c_2_c_make_c_compiler_id_8c.tex  _c_make_files_23_810_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.tex  _c_make_files_2feature__tests_8c.tex  _c_make_files_2feature__tests_8cxx.tex  _connector_8cc.tex  _connector_8cc__incl.md5  _connector_8h.tex  _connector_8h__dep__incl.md5  _connector_8h__incl.md5  _king_8cc.tex  _king_8cc__incl.md5  _king_8h.tex  _king_8h__dep__incl.md5  _king_8h__incl.md5  _knight_8cc.tex  _knight_8cc__incl.md5  _knight_8h.tex  _knight_8h__dep__incl.md5  _knight_8h__incl.md5  _pawn_8cc.tex  (+95 more)
chess_engine/lib/: BaseBoard.h  Bishop.h  Board.h  Connector.h  Empty_square.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h  Square.h
chess_engine/test/: CMakeCache.txt  CMakeLists.txt  ChessTest.cpp  EndOfGameTest.cc  EndOfGameTest.cpp  ExceptionTest.cc  ExceptionTest.cpp  FigureLogicTest.cc  FigureLogicTest.cpp  Makefile  PawnTest.cpp  chess_test.cbp  cmake_install.cmake  tempTest.cpp  tests
web/: client.py  server.py
web/static/: chess.js
web/templates/: index.html
web/templates/js/: chessboard-1.0.0.min.js
